--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.custom-radio {
+  @apply appearance-none rounded-full border-2 border-[#D8D82F] checked:border-[#D8D82F];
+}
+.custom-radio:checked {
+  background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 16 16' fill='%23D8D82F' xmlns='http://www.w3.org/2000/svg'%3e%3ccircle cx='8' cy='8' r='5.5'/%3e%3c/svg%3e");
+  background-size: 100% 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+}
